# AutoTBH_Monitor

./: .gitignore  LICENSE  NOTICE  README.md  scratch_tokens.txt
.github/workflows/: build.yml
data/: drops.json  farm-calibration.json  gear-base-stats.json  hero-level-xp.json  hover-layout.json  item-alchemy.json  meter-layout.json  meter-offsets.json  offline-reward-runes.json  offline-rewards.json  pets.json  runes.json
data/engine/: codex.json  crafting.json  version.json
data/wiki/: items-slim.json
docs/: README.en.md  architecture.en.md  architecture.md
frontend/: i18n.config.ts  nuxt.config.ts  package-lock.json  package.json
frontend/app/assets/css/: main.css
frontend/app/composables/: useApi.ts
frontend/app/layouts/: default.vue
frontend/app/pages/: bestiary.vue  crafting.vue  farm.vue  heroes.vue  index.vue  market.vue  meter.vue  runes.vue  settings.vue  stash.vue  updates.vue  upgrades.vue
frontend/i18n/: i18n.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: currency.rs  engine.rs  farm.rs  gearstats.rs  insights.rs  lib.rs  main.rs  memory.rs  meter.rs  news.rs  pricing.rs  save.rs  server.rs  steam.rs  upgrades.rs  wiki.rs
